--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scan-order",
-  "version": "1.0.1-dev.1",
+  "version": "1.0.1",
   "private": true,
   "description": "扫码点餐",
   "templateInfo": {
