--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "mobx-react": "^7.6.0",
     "react-dom": "^18.0.0",
     "@tarojs/react": "3.6.1",
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "classnames": "2.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
