--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18'
-    - run: npm ci
-    - run: npm run build
+    - run: npm install
+    - run: npm run build:h5
 
     - name: Init new repo in dist folder and commit generated files
       run: |
