--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git status
-        git remote add origin https://github.com/z-jingqi/scan-order.git
+        git remote add origin git@github.com:z-jingqi/scan-order.git
         git checkout -b gh-pages
         git add --all
         git commit -m "deploy to Github pages"
