--- a/package.json
+++ b/package.json
@@ -38,43 +38,44 @@
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.6.1",
     "@tarojs/helper": "3.6.1",
-    "@tarojs/plugin-platform-weapp": "3.6.1",
+    "@tarojs/plugin-framework-react": "3.6.1",
     "@tarojs/plugin-platform-alipay": "3.6.1",
-    "@tarojs/plugin-platform-tt": "3.6.1",
-    "@tarojs/plugin-platform-swan": "3.6.1",
+    "@tarojs/plugin-platform-h5": "3.6.1",
     "@tarojs/plugin-platform-jd": "3.6.1",
     "@tarojs/plugin-platform-qq": "3.6.1",
-    "@tarojs/plugin-platform-h5": "3.6.1",
+    "@tarojs/plugin-platform-swan": "3.6.1",
+    "@tarojs/plugin-platform-tt": "3.6.1",
+    "@tarojs/plugin-platform-weapp": "3.6.1",
+    "@tarojs/react": "3.6.1",
     "@tarojs/runtime": "3.6.1",
     "@tarojs/shared": "3.6.1",
     "@tarojs/taro": "3.6.1",
-    "@tarojs/plugin-framework-react": "3.6.1",
+    "classnames": "2.3.2",
     "mobx": "^6.8.0",
     "mobx-react": "^7.6.0",
-    "react-dom": "^18.0.0",
-    "@tarojs/react": "3.6.1",
     "react": "^18.0.0",
-    "classnames": "2.3.2"
+    "react-dom": "^18.0.0",
+    "taro-ui": "^3.1.0-beta.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
-    "@tarojs/cli": "3.6.1",
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^18.0.0",
-    "postcss": "^8.4.18",
-    "webpack": "5.69.0",
-    "@tarojs/webpack5-runner": "3.6.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "react-refresh": "^0.11.0",
-    "babel-preset-taro": "3.6.1",
-    "eslint-config-taro": "3.6.1",
-    "eslint": "^8.12.0",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^5.20.0",
+    "@tarojs/cli": "3.6.1",
+    "@tarojs/webpack5-runner": "3.6.1",
+    "@types/react": "^18.0.0",
+    "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "typescript": "^4.1.0"
+    "@typescript-eslint/parser": "^5.20.0",
+    "babel-preset-taro": "3.6.1",
+    "eslint": "^8.12.0",
+    "eslint-config-taro": "3.6.1",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "postcss": "^8.4.18",
+    "react-refresh": "^0.11.0",
+    "stylelint": "9.3.0",
+    "typescript": "^4.1.0",
+    "webpack": "5.69.0"
   }
 }
